--- a/style.css
+++ b/style.css
@@ -8,14 +8,17 @@
 }
 
 :root {
-    --accent-color: crimson;
-    --accent-color-2: skyblue;
-    --bg: #2f2f2f;
+    --accent-color: red;
+    --box-bg-color: #2f2f2f;
     --font-color: white;
 }
 
+::selection{
+    background-color: white;
+    color: var(--accent-color);
+}
+
 body {
-    height: 100vh;
     width: 100%;
     background-color: #414141;
     display: flex;
@@ -25,13 +28,16 @@ body {
 
 .container {
     width: 40%;
+    height: auto;
+    margin: 10% 0;
     padding: 3%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--bg);
+    background-color: var(--box-bg-color);
     border-radius: 10px;
+    box-shadow: 0px 0px 3px var(--accent-color);
 }
 
 .container h1 {
@@ -40,7 +46,7 @@ body {
 }
 
 /*? Input CSS  */
-.input-div {
+.form {
     width: 90%;
     border-radius: 10px;
     padding: 2% 4%;
@@ -52,7 +58,7 @@ body {
     gap: 30%
 }
 
-.note-input {
+.form .note-input {
     border: none;
     outline: none;
     font-size: 1.1rem;
@@ -63,43 +69,73 @@ body {
     color: var(--font-color);
 }
 
-.note-input::placeholder {
+.form .note-input::placeholder {
     color: var(--font-color);
     font-weight: 700;
 }
 
-.add-btn {
+/* Add Button */
+.form button {
+    background-color: transparent;
+    border: none;
+}
+
+.form button .add-btn {
     font-size: 1.5rem;
     color: var(--font-color);
     cursor: pointer;
+    transition: all 0.2s ease-in-out;
 }
 
-/*? Tasks CSS  */
-.task-box{
-    width: 100%;
-    margin: 3% 0;
-    height: auto;
-    text-align: center;
-    color: var(--font-color);
+/*? Todo list Container CSS  */
+.todo-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: var(--font-color);
+
 }
 
-.task{
-    width: 90%;
-    border-radius: 10px;
-    padding: 2% 4%;
-    background-color: var(--accent-color-2);
+.todo-container h2 {
     margin: 2% 0;
+    border-bottom: 2px solid white;
+}
+
+.todo-list {
+    list-style: none;
+}
+
+/*? Dynamic CSS for JS  */
+.todo {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 30%
+    gap: 10%;
+    margin: 3% 0;
+    padding: 2%;
+    transition: all 0.2s ease-in-out;
 }
 
-.icons{
-    display: flex;
-    gap: 10px;
+.todo li {
+    flex: 1;
+}
+
+.complete-btn,
+.trash-btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    height: 100%;
+}
+
+.todo button i {
+    color: white;
     font-size: 1.2rem;
+    pointer-events: none;
+}
+
+/* completed */
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
 }
