--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --font-color: white;
 }
 
-::selection{
+::selection {
     background-color: white;
     color: var(--accent-color);
 }
@@ -53,25 +53,29 @@ body {
     background-color: var(--accent-color);
     margin: 2% 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 30%
 }
 
-.form .note-input {
+.form .task-input {
     border: none;
     outline: none;
     font-size: 1.1rem;
-    border-radius: 5px;
     height: 4vh;
-    width: 20vw;
+    width: 25vw;
     background-color: transparent;
     color: var(--font-color);
 }
 
-.form .note-input::placeholder {
+.form .task-input::placeholder {
     color: var(--font-color);
     font-weight: 700;
+    transition: all 0.3s ease-in-out;
+}
+
+.form .task-input:focus::placeholder {
+    transform: translateY(50px);
+    color: transparent;
 }
 
 /* Add Button */
@@ -137,5 +141,50 @@ body {
 /* completed */
 .completed {
     text-decoration: line-through;
-    opacity: 0.5;
+    opacity: 0.3;
+}
+
+
+/*? Filter */
+.select {
+    border: none;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.filter-todo {
+    /* appearance: none; */
+    text-align: center;
+    border-radius: 8px;
+    padding: 8% 4%;
+    margin: 4%;
+    font-size: 1.1rem;
+    font-weight: 700;
+    background-color: var(--accent-color);
+    border: none;
+    outline: none;
+    color: var(--font-color);
+    cursor: pointer;
+}
+
+.filter-todo:focus {
+    background-color: white;
+    color: #2f2f2f;
+}
+
+
+/*? Media Query Mobile */
+@media all and (max-width: 600px) {
+    .container {
+        width: 80%;
+    }
+}
+
+/*? Media Query Tablet */
+@media all and (max-width: 800px) {
+    .container {
+        width: 65%;
+    }
 }
